syntax = "proto3";

option csharp_namespace = "Protos.Actions.UpdateAction";

package updateaction;

message UpdateActionResponse {
  string Id = 1;
}